--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "firebase": "^4.1.2",
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
     "re-base": "^3.0.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-scroll-up": "^1.3.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
