--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "express": "^4.15.3",
     "firebase": "^4.1.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "re-base": "^3.0.1",
     "react": "^15.5.4",
-    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-polyfill": "0.0.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-scroll-up": "^1.3.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.2",
     "npm-run-all": "^4.0.2",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "url-loader": "^0.5.9"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
