--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
-    "express": "^4.15.3",
+    "core-js": "^2.4.1",
     "firebase": "^4.1.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
-    "re-base": "^3.0.1",
+    "re-base": "^3.0.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-polyfill": "0.0.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
-    "react-scroll-up": "^1.3.0",
-    "redux": "^3.6.0",
-    "request": "^2.81.0"
+    "react-scroll-up": "^1.3.0"
   },
   "devDependencies": {
+    "firebase-tools": "^3.9.1",
     "node-sass-chokidar": "0.0.2",
     "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.7",
@@ -30,6 +28,8 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
+    "deploy": "npm run build && firebase deploy",
+    "firebase-init": "firebase login && firebase init",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
